--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,8 +16,9 @@ clap_complete = "4.5.55"
 clap-markdown = "0.1.5"
 
 # Others
-toml = "0.9.5"
+toml = "0.9.7"
 git2 = "0.20.2"
-serde = "1.0.219"
+serde = "1.0.226"
 color-eyre = "0.6.5"
 itertools = "0.14.0"
+toml_edit = "0.23.6"
