--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,10 +15,13 @@ clap = { version = "4.5.41", features = [
 clap_complete = "4.5.55"
 clap-markdown = "0.1.5"
 
+# Errors
+color-eyre = "0.6.5"
+snafu = {version = "0.8.9", features = ["rust_1_81"]}
+
 # Others
 toml = "0.9.7"
 git2 = "0.20.2"
 serde = "1.0.226"
-color-eyre = "0.6.5"
 itertools = "0.14.0"
 toml_edit = "0.23.6"
