feat: add msrv ci check

--- a/.github/workflows/rust.yaml
+++ b/.github/workflows/rust.yaml
@@ -28,7 +28,10 @@ jobs:
       - uses: Swatinem/rust-cache@v2
 
       - name: Install cargo-berger for full suite testing
-        run: cargo install --git https://github.com/RustyNova016/cargo-berger --rev 9194544cc355b31ad49c4f5d397d25c8d9db28c6
+        run: cargo install --git https://github.com/RustyNova016/cargo-berger --rev 451b2e1835ef9a64f466745ddc2f543eff6ed437
+
+      - name: Install cargo-msrv
+        run: cargo install cargo-msrv --all-features
 
       - name: Run berger ci
         run: cargo-berger rust ci
