--- a/.github/workflows/rust.yaml
+++ b/.github/workflows/rust.yaml
@@ -25,16 +25,25 @@ jobs:
         with:
           components: rustfmt, clippy
 
+      - name: Install minimal nightly toolchain
+        uses: dtolnay/rust-toolchain@nightly
+
       - uses: Swatinem/rust-cache@v2
 
       - name: Install cargo-berger for full suite testing
         run: cargo install --git https://github.com/RustyNova016/cargo-berger --branch ci_integration
+
+      - name: Install cargo-hack
+        run: cargo +stable install cargo-hack --locked
 
       - name: Install cargo-msrv
         run: cargo install cargo-msrv --all-features
 
       - name: Install cargo-machete
         run: cargo install cargo-machete --locked
+
+      - name: Install cargo-minimal-versions
+        run: cargo +stable install cargo-minimal-versions --locked
 
       - name: Run berger ci
         run: cargo-berger rust ci
