--- a/berger.toml
+++ b/berger.toml
@@ -12,4 +12,5 @@ default_branch="master"
     clippy = true
     msrv = true
     machete = true
-    semver = true
+    semver = false
+    min_versions = true
