--- a/berger.toml
+++ b/berger.toml
@@ -10,7 +10,9 @@ default_branch="master"
     [repository.cargo-berger.rust.ci]
     fmt = true
     clippy = true
+    test = true
+    nextest = false
     msrv = true
     machete = true
     semver = false
-    min_versions = true
+    # min_versions = true
