feat: add doc check

--- a/berger.toml
+++ b/berger.toml
@@ -9,6 +9,7 @@ default_branch="master"
 
     [repository.cargo-berger.rust.ci]
     fmt = true
+    doc = true
     clippy = true
     test = true
     nextest = false
