feat: checkout issue branch

--- a/berger.toml
+++ b/berger.toml
@@ -16,7 +16,7 @@ remote_url="https://github.com/RustyNova016/cargo-berger"
     doc = true
     clippy = true
     test = true
-    nextest = false
+    nextest = true
     msrv = true
     machete = true
     semver = false
